[package]
name = "radicle-proxy-cli"
version = "0.1.0"
authors = ["Wim Looman <git@nemo157.com>"]
edition = "2018"
description = "A CLI interface to radicle-proxy"

[[bin]]
name = "rad"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.34", features = ["std"], default-features = false }
clap = { version = "3.0.0-beta.2", features = ["std", "color", "suggestions", "derive"], default-features = false }
fehler = { version = "1.0.0", default-features = false }
serde = { version = "1.0.118", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.22", default-features = false }
ureq = { version = "1.5.2", features = ["json", "cookies"], default-features = false }
url = { version = "2.2.0", default-features = false }
