[package]
name = "radicle-proxy-cli"
version = "0.1.0"
authors = ["Wim Looman <radicle-proxy-cli.crate@nemo157.com>"]
edition = "2018"
description = "A CLI interface to radicle-proxy"
repository = "rad:git:hwd1yre85oenojqfpzt1ihd36enmupg4dnb1o78rsos8h957bpxxbzn5g4a"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rad"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.34", features = ["std"], default-features = false }
clap = { version = "3.0.0-beta.2", features = ["std", "color", "suggestions", "derive"], default-features = false }
fehler = { version = "1.0.0", default-features = false }
rpassword = { version = "5.0.0", default-features = false }
secrecy = { version = "0.7.0", features = ["alloc", "serde"], default-features = false }
serde = { version = "1.0.118", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.60", default-features = false }
thiserror = { version = "1.0.22", default-features = false }
tracing = { version = "0.1.22", default-features = false }
tracing-subscriber = { version = "0.2.15", features = ["env-filter", "fmt", "ansi"], default-features = false }
ureq = { version = "1.5.2", features = ["json", "cookies"], default-features = false }
url = { version = "2.2.0", default-features = false }
